--- a/assets/css/article.css
+++ b/assets/css/article.css
@@ -5,9 +5,7 @@
   margin-top:28px;
   font-size: var(--content-font-size);
 }
-
-
-/* margin for headings */
+/* margin for headings - todo*/
 .article-content > [id]:not(:first-child) {
   margin-top: 56px;
 }
@@ -128,19 +126,14 @@
 /* ----------------- */
 /* code highlighting */
 /* ----------------- */
-pre {
+pre[class*="language-"] ,
+code[class*="language-"] {
     padding: 1.6rem 2.4rem;
-    overflow-x: scroll;
     hyphens: none;
     line-height: 1.5;
     white-space: pre;
-    background-color: var(--secondary-background-color);
-    -webkit-overflow-scrolling: touch;
-}
-code[class*="language-"],
-pre[class*="language-"] {
-	font-size: 1.4rem;
-  font-family: var(--font-mono);
+	  font-size: 1.4rem;
+    font-family: var(--font-mono);
 }
 
 /* make output lines in code blocks not selectable */
