--- a/assets/css/site.css
+++ b/assets/css/site.css
@@ -64,7 +64,6 @@ a:hover {
 .article-content {
     padding-left: var(--site-padding);
     padding-right: var(--site-padding);
-    justify-self: center;
 }
 
 @media (min-width: 1100px) {
