--- a/assets/css/variables.css
+++ b/assets/css/variables.css
@@ -63,12 +63,14 @@ html[data-theme='dark'] {
     --hero-background-color: rgb(22, 27, 34);
     --background-color: #141414;
     --secondary-background-color: rgb(55, 61, 70);
+    --secondary-background-color: #17161a;
     --title-color:  #f0f6fc;
     --heading-color: rgb(230, 237, 243);
     --secondary-title-color: #ccc;
     --text-color:#b0b2b4;
     --secondary-text-color:  #8b949e;
     --border-color: rgba(56,139,253,0.4);
+    --border-color: #564d4d;
     --disabled-button-color: #575050;
     --link-color: rgb(47, 129, 247);
 }
